# switch

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
cert/: ca_cert.pem
components/blynk/: CMakeLists.txt  blynk.c
components/blynk/include/: blynk.h
include/: Server_Exchange.h  blynk_management.h  main.h  ntp.h  ota.h  protocol.h  wifi.h
main/: CMakeLists.txt  Server_Exchange.cpp  blynk_management.c  main.cpp  ntp.cpp  ota.cpp  wifi.c
